--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ html
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     flatpickr(".date-picker", {
-      dateFormat: "m/d/Y",
+      dateFormat: "MM/DD/YYYY",
       defaultDate: new Date()
     });
   });
