--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ html
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     flatpickr(".date-picker", {
-      dateFormat: "",
+      dateFormat: "m/d/Y",
       defaultDate: new Date()
     });
   });
